--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav id="autocollapse" class="navbar navbar-expand-md" role="navigation">
         <div class="container-xxl flex-nowrap">
           <a class="navbar-brand" href="index.html">
-            <img id="logo" class="svg" src="public/aldoc_logo.svg" alt="Documentation">
+            <img id="logo" class="svg" src="public/FoodCloudPlus-logo-small.png" alt="Documentation">
             Documentation
           </a>
           <button class="btn btn-lg d-md-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navpanel" aria-controls="navpanel" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
         </div>
 
         <article data-uid="">
-<h1 id="welcome-to-your-new-reference-documentation">Welcome to your new reference documentation</h1>
+<h1 id="welcome-to-your-new-reference-documentation">Welcome to the FoodCloudPlus Help!</h1>
 
 <p>This is the landing page for your generated reference documentation.</p>
 <p>You can use the navigation bar at the top and the table of contents to the left to navigate your documentation.</p>
