pic and wording

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav id="autocollapse" class="navbar navbar-expand-md" role="navigation">
         <div class="container-xxl flex-nowrap">
           <a class="navbar-brand" href="index.html">
-            <img id="logo" class="svg" src="public/FoodCloudPlus-logo-small.png" alt="Documentation">
+            <img id="logo" class="svg" src="public/Banner.png" alt="Documentation">
             Documentation
           </a>
           <button class="btn btn-lg d-md-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navpanel" aria-controls="navpanel" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,9 +74,11 @@
         <article data-uid="">
 <h1 id="welcome-to-your-new-reference-documentation">Welcome to the FoodCloudPlus Help!</h1>
 
-<p>This is the landing page for your generated reference documentation.</p>
+<p>We offer a better way of doing ERP. The level of expertise we have in the food industry is woven into our business and we truly understand food businesses and their challenges. We have a reputation for transforming food businesses with technology.</p>
+
+<p>We leverage the Microsoft Dynamics 365 Business Central platform and add just food-specific functionality that addresses compliance, food safety, quality, recipe management and recalls.</p>
+
 <p>You can use the navigation bar at the top and the table of contents to the left to navigate your documentation.</p>
-<p>You can change this content by editing the index.md file found in <code>&lt;outputfolder&gt;/index.md</code>.</p>
 </article>
 
         <div class="contribution d-print-none">
