--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav id="autocollapse" class="navbar navbar-expand-md" role="navigation">
         <div class="container-xxl flex-nowrap">
           <a class="navbar-brand" href="index.html">
-            <img id="logo" class="svg" src="public/Banner.png" alt="Documentation">
+            <img id="logo" class="svg" src="public/Banner.png">
             Documentation
           </a>
           <button class="btn btn-lg d-md-none border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navpanel" aria-controls="navpanel" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
 
 <p>We leverage the Microsoft Dynamics 365 Business Central platform and add just food-specific functionality that addresses compliance, food safety, quality, recipe management and recalls.</p>
 
-<p>You can use the navigation bar at the top and the table of contents to the left to navigate your documentation.</p>
+<p>You can use the navigation bar at the top and the table of contents to the left to navigate our documentation.</p>
 </article>
 
         <div class="contribution d-print-none">
